--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vite --config vite.config.test.js"
   },
   "dependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.5.4"
+    "puppeteer": "^10.2.0",
+    "vite": "^2.5.4",
+    "vite-plugin-test": "^0.0.5"
   }
 }
