--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "vite --config vite.config.test.js"
+    "test": "vite --config vite.config.test.js",
+    "lint": "eslint --ext .jsx,.js src",
+    "pre-commit": "npm run lint",
+    "pre-push": "npm test",
+    "post-merge": "npm install",
+    "post-rewrite": "npm install"
   },
   "dependencies": {
     "enzyme": "^3.11.0",
@@ -15,6 +20,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.1",
     "puppeteer": "^10.2.0",
     "vite": "^2.5.4",
     "vite-plugin-test": "^0.0.5"
