--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
+    "i18next": "^20.6.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0"
   },
