--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "puppeteer": "^10.2.0",
+    "sass": "^1.41.1",
     "vite": "^2.5.4",
     "vite-plugin-test": "^0.0.5"
   }
